# minecraft-clone

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  THIRD-PARTY-LICENSES.md  一些约定.txt
cmake/: CCacheConfig.cmake  CompilerConfig.cmake
module/: CMakeLists.txt
module/core/: App.ixx  ConfigManager.ixx  Init.ixx  InputSystem.ixx  Window.ixx
module/game/: World.ixx
module/game/cmd/: CmdPlayer.ixx  CmdVariant.ixx
module/game/cmd/impl/: SinBullet.ixx
module/game/comp/: BulletComp.ixx  CollisionComp.ixx  Comp.ixx  DragComp.ixx  EntityComp.ixx  PlayerComp.ixx  RenderComp.ixx  SpriteComp.ixx  TagComp.ixx  TransformComp.ixx
module/game/comp/block/: BlockComp.ixx
module/game/system/: BlockSys.ixx  BulletSys.ixx  CollisionSys.ixx  EntityMoveSys.ixx  PlayerSys.ixx  SpriteMovementSys.ixx
module/game/world/: Chunk.ixx  RaySys.ixx  World.ixx
module/graphics/: MeshManager.ixx  RenderSystem.ixx  Shader.ixx  ShaderManager.ixx  TextureManager.ixx
module/resources/: AudioManager.ixx  TextureManager.ixx
module/utils/: Config.ixx  FileManager.ixx  JsonManager.ixx  Math.ixx  Random.ixx  Time.ixx  glm_hash.ixx
resources/json/config/: bullet.json  player.json
resources/shaders/: default.fs  default.vs  ui.vs
src/: CMakeLists.txt  main.cpp
src/core/: App.cpp  App.cppm  AppLogicSys.cppm  ConfigManager.cpp  Events.cppm  Init.cpp  Init.cppm  InputSystem.cpp  InputSystem.cppm  Window.cpp  Window.cppm  core.cppm
src/game/: Chunk.cppm  World.cpp  World.cppm  game.cppm
src/game/cmd/: CmdPlayer.cpp
src/game/cmd/impl/: SinBullet.cpp
src/game/ecs/: EntityMoveSys.cppm  PlayerSys.cppm  game.ecs.cppm
src/game/ecs/comp/: EntityComp.cppm  Tag.cppm
src/game/system/: BlockSys.cpp  BulletSys.cpp  CollisionSys.cpp  EntityMoveSys.cpp  PlayerSys.cpp  SpriteMovementSys.cpp
src/game/world/: Chunk.cpp  RaySys.cpp  World.cpp
src/graphics/: CmdBuffer.cppm  CommandBuffer.cppm  Mesh.cppm  MeshManager.cpp  MeshManager.cppm  PipeLine.cppm  Pipeline.cppm  Render.cppm  RenderSystem.cpp  RenderSystem.cppm  Shader.cpp  Shader.cppm  ShaderManager.cpp  ShaderManager.cppm  TextureManager.cpp  TextureManager.cppm  graphics.cppm
src/graphics/impl/: Mesh.cppm  Vertex.cppm
src/impl/: Block.cppm  Config.cppm  Error.cppm  Events.cppm  Input.cppm  Key.cppm  impl.cppm
src/resources/: AudioManager.cpp  AudioManager.cppm  TextureManager.cpp  TextureManager.cppm  resources.cppm
src/utils/: Config.cppm  FileManager.cpp  FileUtils.cppm  JsonManager.cpp  Math.cpp  Math.cppm  Random.cpp  Random.cppm  Time.cpp  Time.cppm  utils.cppm
